# pica-pica

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  desktop-preview.yml  release.yml
docs/: architecture.md  ffmpeg-packaging.md  ffmpeg-provenance.md  libmpv-provenance.md  releasing.md  scalability.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/binaries/mpv/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/metadata/: mod.rs  online.rs  provider.rs  secrets.rs
src-tauri/src/player/: mod.rs  windows.rs
src-tauri/src/video/: ffmpeg.rs  mod.rs
src/app/: App.tsx
src/components/brand/: PicaMark.tsx
src/components/feedback/: AppError.tsx  StartupScreen.tsx
src/components/layout/: AppShell.tsx  PageContainer.tsx
src/components/player/: VideoPlayer.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  item.tsx  label.tsx  native-select.tsx  separator.tsx  slider.tsx  (+2 more)
src/data/: demo-library.ts  library-client.ts
src/lib/: utils.test.ts  utils.ts
src/pages/: GameDetailPage.tsx  LibraryPage.tsx  OnboardingPage.tsx  SettingsPage.tsx
src/styles/: globals.css
src/types/: library.ts  player.ts
(+1 files in other folders)
